<resources>
    <string name="app_name">Bathing Sites</string>
    <string name="action_settings">Settings</string>
    <string name="BathingSitesView_DefaultValue">0 Bathing Sites</string>
    <string name="title_activity_new_bathing_site">NewBathingSiteActivity</string>


    <string name="ok">OK</string>

    <!--- Related to new Bathing Fragment -->
    <string name="newBath_hint_name">Name:</string>
    <string name="newBath_hint_Description">Description:</string>
    <string name="newBath_hint_address">Address:</string>
    <string name="newBath_hint_latitude">Latitude:</string>
    <string name="newBath_hint_longitude">Longitude:</string>
    <string name="newBath_hint_waterTemp">Water temp:</string>
    <string name="newBath_hint_waterTempDate">Date for temp:</string>
    <string name="newBath_menu_save">Save</string>
    <string name="newBath_menu_clear">Clear</string>
    <string name="newBath_menu_weather">Weather</string>
    <string name="getWeather">Fetching Weather…</string>

    <!-- Related to settings -->
    <string name="pref_key_weatherSource">pref_key_weatherSource</string>
    <string name="pref_title_weatherSource">Weather Source</string>
    <string name="pref_weatherSourceDEFUALT">http://dt031g.programvaruteknik.nu/badplatser/weather.php</string>
    <string name="pref_key_Category_weatherSource">Source settings</string>
    <string name="pref_title1">Set your weather source</string>
    <string name="pref_key_Category_Reset">Reset</string>
    <string name="pref_title_Reset">Reset to default</string>
    <string name="pref_Category_title_Reset">Reset section</string>
    <string name="pref_resetOnClick">pref_resetOnClick</string>
    <string name="action_download">Download</string>
    <string name="pref_key_downloadSource">pref_key_downloadSource</string>
    <string name="pref_key_downloadSourceDEFUALT">http://dt031g.programvaruteknik.nu/badplatser/koordinater/</string>
    <string name="pref_title_downloadSource">Download source</string>
    <string name="download_activity_Downloading">Downloading..</string>
    <string name="DEFAULT_PREFS_LOADED">false</string>
    <string name="action_map">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="downloadingText">Downloading…</string>
    <string name="pref_key_GPSradius">gps_pref_key</string>
    <string name="pref_key_GPSradiusDEFAULT">50</string>
    <string name="pref_title_GPSradius">Max distance to bathsites (km)</string>
    <string name="pref_key_Category_Gps">Gps Settings</string>
    <string name="pref_category_title_download">Download source</string>
    <string name="newSiteTitle">New Bathingsite</string>


</resources>
