<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sest1601.bathingsites.MainActivity">

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/action_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/action_download"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
