<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_site.NewBathingSiteFragment"
    tools:showIn="@layout/activity_new_bathing_site">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/newBath_MasterContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_NameContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/newBath_Field_Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/newBath_hint_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_DescriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newBath_NameContainer">

            <EditText
                android:id="@+id/newBath_Field_Desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/newBath_hint_Description"
                app:layout_constraintBottom_toTopOf="@+id/newBath_Field_Address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newBath_Field_Name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_AddressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newBath_DescriptionContainer">

            <EditText
                android:id="@+id/newBath_Field_Address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/newBath_hint_address"
                app:layout_constraintBottom_toTopOf="@+id/newBath_Field_Longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newBath_Field_Desc" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_LongitudeContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newBath_LatitudeContainer"
            app:layout_constraintTop_toBottomOf="@+id/newBath_AddressContainer">

            <EditText
                android:id="@+id/newBath_Field_Longitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/newBath_hint_longitude"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/newBath_Ratingbar"
                app:layout_constraintEnd_toStartOf="@+id/newBath_Field_Latitude"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newBath_Field_Address" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_LatitudeContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/newBath_LongitudeContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newBath_AddressContainer">

            <EditText
                android:id="@+id/newBath_Field_Latitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/newBath_hint_latitude"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="@+id/newBath_Field_Longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/newBath_Field_Longitude"
                app:layout_constraintTop_toTopOf="@+id/newBath_Field_Longitude" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_newBath_RatingContainer"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/newBath_WaterTEMPContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newBath_LongitudeContainer">

            <RatingBar
                android:id="@+id/newBath_Ratingbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/newBath_Field_WaterTEMP"
                app:layout_constraintTop_toBottomOf="@+id/newBath_Field_Longitude"
                tools:layout_editor_absoluteX="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_WaterTEMPContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/newBath_WaterTEMP_DATEContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newBath_newBath_RatingContainer">

            <EditText
                android:id="@+id/newBath_Field_WaterTEMP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/newBath_hint_waterTemp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/newBath_Field_WaterTEMP_DATE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newBath_Ratingbar" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newBath_WaterTEMP_DATEContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newBath_WaterTEMPContainer"
            app:layout_constraintTop_toTopOf="@+id/newBath_WaterTEMPContainer"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/newBath_Field_WaterTEMP_DATE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/newBath_hint_waterTempDate"
                android:inputType="date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/newBath_Field_WaterTEMP"
                app:layout_constraintTop_toTopOf="@+id/newBath_Field_WaterTEMP"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>


</ScrollView>